<resources>
    <string name="app_name">Thrive: Savings goal manager</string>

    <string name="share_message">Achieve financial freedom by managing your money like a professional with money manager</string>
    <string name="add_goal">Add goal</string>
    <string name="goal_name">Goal name</string>
    <string name="describe_your_goal">Describe your goal</string>
    <string name="goal_type">Goal type</string>
    <string name="target_amount">Target amount</string>
    <string name="incremental_amount">Incremental amount</string>
    <string name="save_goal">Save goal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>