<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.goalmanager.AddGoalFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back_arrow">

        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_goal"
            android:textColor="@color/primary_text"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textSize="20sp" />

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/mainLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/saveGoal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/goalName"
                style="@style/InputOutline"
                android:hint="@string/goal_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:letterSpacing="0.07"
                app:hintTextAppearance="?attr/textAppearanceBody1"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toTopOf="parent" >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:paddingStart="0dp"
                    android:letterSpacing="0.07"
                    android:textSize="16sp"
                    android:textAppearance="?attr/textAppearanceBody1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/goalDescription"
                style="@style/InputOutline"
                android:hint="@string/describe_your_goal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:letterSpacing="0.07"
                app:hintTextAppearance="?attr/textAppearanceBody1"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/goalName" >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:singleLine="false"
                    android:paddingStart="0dp"
                    android:letterSpacing="0.07"
                    android:minLines="2"
                    android:textSize="16sp"
                    android:textAppearance="?attr/textAppearanceBody1" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/goalTypeTitle"
                android:textAppearance="?attr/textAppearanceBody1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/goal_type"
                android:textStyle="bold"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/goalDescription" />

            <include
                android:id="@+id/goalType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                layout="@layout/input_account_type"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintTop_toBottomOf="@id/goalTypeTitle"
                app:layout_constraintStart_toStartOf="@id/guidelineStart" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/startAmount"
                style="@style/InputOutline"
                android:hint="Starting amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:letterSpacing="0.07"
                android:layout_marginTop="8dp"
                app:hintTextAppearance="?attr/textAppearanceBody1"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintTop_toBottomOf="@id/goalType"
                app:layout_constraintStart_toStartOf="@id/guidelineStart">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/startAmountValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    android:paddingStart="0dp"
                    android:letterSpacing="0.07"
                    android:textAppearance="?attr/textAppearanceBody1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/incrementalAmount"
                style="@style/InputOutline"
                android:hint="@string/incremental_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:letterSpacing="0.07"
                android:layout_marginTop="8dp"
                app:hintTextAppearance="?attr/textAppearanceBody1"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintTop_toBottomOf="@id/startAmount"
                app:layout_constraintStart_toStartOf="@id/guidelineStart">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/incrementalAmountValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    android:paddingStart="0dp"
                    android:letterSpacing="0.07"
                    android:textAppearance="?attr/textAppearanceBody1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/targetAmount"
                style="@style/InputOutline"
                android:hint="@string/target_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:letterSpacing="0.07"
                android:layout_marginTop="8dp"
                app:hintTextAppearance="?attr/textAppearanceBody1"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintTop_toBottomOf="@id/incrementalAmount"
                app:layout_constraintStart_toStartOf="@id/guidelineStart">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/targetAmountValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    android:paddingStart="0dp"
                    android:letterSpacing="0.07"
                    android:textAppearance="?attr/textAppearanceBody1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/startDate"
                style="@style/InputOutline"
                android:hint="Start date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:letterSpacing="0.07"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_goneMarginEnd="0dp"
                app:hintTextAppearance="?attr/textAppearanceBody1"
                app:layout_constraintEnd_toStartOf="@id/endDate"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/targetAmount">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/startDateValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:letterSpacing="0.07"
                    android:clickable="true"
                    android:focusable="false"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:drawableEnd="@drawable/ic_calendar"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/endDate"
                style="@style/InputOutline"
                android:hint="End date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:letterSpacing="0.07"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                app:hintTextAppearance="?attr/textAppearanceBody1"
                app:layout_constraintStart_toEndOf="@id/startDate"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintTop_toBottomOf="@id/targetAmount">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/endDateValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    android:paddingEnd="0dp"
                    android:paddingStart="0dp"
                    android:letterSpacing="0.07"
                    android:clickable="true"
                    android:focusable="false"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:drawableEnd="@drawable/ic_calendar" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="3dp"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintTop_toBottomOf="@id/startDate"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintBottom_toBottomOf="parent" >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foreground="?selectableItemBackground"
                    android:minHeight="60dp">

                    <ImageView
                        android:id="@+id/goalVisual"
                        android:layout_width="0dp"
                        android:layout_height="150dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/goalVisualRemove"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="8dp"
                        android:clickable="true"
                        android:foreground="?selectableItemBackground"
                        app:layout_constraintEnd_toEndOf="@+id/goalVisual"
                        app:layout_constraintTop_toTopOf="@+id/goalVisual"
                        app:srcCompat="@drawable/ic_close" />

                    <View
                        android:id="@+id/goalVisualView"
                        android:layout_width="0dp"
                        android:layout_height="4dp"
                        android:background="@drawable/toolbar_shadow"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/goalVisual"/>

                    <androidx.constraintlayout.widget.Group
                        android:id="@+id/goalVisualGroup"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:visibility="gone"
                        app:constraint_referenced_ids="goalVisual, goalVisualView, goalVisualRemove"/>

                    <TextView
                        android:id="@+id/reportProblemLabel"
                        android:includeFontPadding="false"
                        android:textAppearance="?attr/textAppearanceCaption"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="Add photo (optional)"
                        android:textSize="16sp"
                        android:layout_marginStart="16dp"
                        android:layout_marginVertical="16dp"
                        app:layout_goneMarginTop="16dp"
                        app:layout_constraintEnd_toStartOf="@+id/reportProblemIcon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/goalVisual" />

                    <ImageView
                        android:id="@+id/reportProblemIcon"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/reportProblemLabel"
                        app:layout_constraintBottom_toBottomOf="@+id/reportProblemLabel"
                        app:srcCompat="@drawable/ic_add_photo" />

                    <View
                        android:id="@+id/addImageView"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:clickable="true"
                        android:foreground="?selectableItemBackground"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/goalVisual"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveGoal"
        style="@style/ColoredButtonAppearance"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:text="@string/save_goal"
        android:textAllCaps="false"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>